--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -5,14 +5,15 @@ RUN apk update && apk add --no-cache build-base gcc autoconf automake zlib-dev l
 ARG NODE_ENV=production
 ENV NODE_ENV=${NODE_ENV}
 WORKDIR /opt/
-COPY ./package.json ./yarn.lock ./
+COPY package.json package-lock.json ./
+RUN npm config set fetch-retry-maxtimeout 600000 -g && npm install --only=production
 ENV PATH /opt/node_modules/.bin:$PATH
-RUN yarn config set network-timeout 600000 -g && yarn install --production
 WORKDIR /opt/app
-COPY ./ .
-RUN yarn build
+COPY . .
+RUN ["npm", "run", "build"]
 
 FROM node:18-alpine
+RUN addgroup -g 1001 strapi && adduser -u 1001 -G strapi -s /bin/sh -D strapi
 RUN apk add --no-cache vips-dev
 ARG NODE_ENV=production
 ENV NODE_ENV=${NODE_ENV}
@@ -21,5 +22,6 @@ COPY --from=build /opt/node_modules ./node_modules
 ENV PATH /opt/node_modules/.bin:$PATH
 WORKDIR /opt/app
 COPY --from=build /opt/app ./
+RUN chown -R strapi:strapi /opt/app
 EXPOSE 1337
-CMD ["yarn", "start"]
+CMD ["npm", "run", "start"]
