--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - src:/opt/app/src
       - package.json:/opt/package.json
       - yarn.lock:/opt/yarn.lock
-      - .env:/opt/app/.env
+      - env:/opt/app/.env
       - public/uploads:/opt/app/public/uploads
     ports:
       - '1337:1337'
