--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -23,6 +23,7 @@ ENV PATH /opt/node_modules/.bin:$PATH
 WORKDIR /opt/app
 COPY --from=build /opt/app ./
 RUN chown -R strapi:strapi /opt/app
+RUN chown -R strapi:strapi /opt/app/public
 RUN chmod -R u+w /opt/app/public
 EXPOSE 1337
 CMD ["npm", "run", "start"]
