--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -25,5 +25,6 @@ COPY --from=build /opt/app ./
 RUN chown -R strapi:strapi /opt/app
 RUN chown -R strapi:strapi /opt/app/public
 RUN chmod -R 777 /opt/app/public
+RUN User strapi
 EXPOSE 1337
 CMD ["npm", "run", "start"]
