--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -13,7 +13,7 @@ COPY . .
 RUN ["npm", "run", "build"]
 
 FROM node:18-alpine
-RUN addgroup -g 1001 strapi && adduser -u 1001 -G strapi -s /bin/sh -DH strapi
+RUN addgroup -g 1001 strapi && adduser -u 1001 -G strapi -s /bin/sh -D strapi
 RUN apk add --no-cache vips-dev
 ARG NODE_ENV=production
 ENV NODE_ENV=${NODE_ENV}
@@ -24,7 +24,7 @@ WORKDIR /opt/app
 COPY --from=build --chown=strapi:strapi /opt/app ./
 
 # Switch to 'appuser'
-USER appuser
+USER strapi
 
 EXPOSE 1337
 CMD ["npm", "run", "start"]
