--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@strapi/plugin-users-permissions": "4.10.6",
     "@strapi/strapi": "4.10.6",
     "@strapi/typescript-utils": "^4.10.6",
-    "pg": "^8.11.0"
+    "pg": "^8.11.0",
+    "strapi-plugin-publisher": "^1.3.4"
   },
   "author": {
     "name": "A Strapi developer"
