--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "strapi": "strapi"
   },
   "dependencies": {
+    "@offset-dev/strapi-calendar": "^0.0.10",
     "@strapi/plugin-documentation": "4.10.5",
     "@strapi/plugin-i18n": "4.10.5",
     "@strapi/plugin-seo": "^1.9.1",
