--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@strapi/strapi": "4.10.5",
     "@strapi/typescript-utils": "4.10.5",
     "pg": "^8.11.0",
+    "strapi-plugin-local-image-sharp": "^1.7.0",
     "strapi-plugin-publisher": "^1.3.4"
   },
   "author": {
