--- a/package.json
+++ b/package.json
@@ -1,35 +1,39 @@
 {
   "name": "cooking-admin",
-  "private": true,
   "version": "0.1.0",
+  "private": true,
   "description": "A Strapi application",
+  "license": "MIT",
+  "author": {
+    "name": "A Strapi developer"
+  },
   "scripts": {
+    "build": "strapi build",
     "develop": "strapi develop",
     "start": "strapi start",
-    "build": "strapi build",
     "strapi": "strapi"
   },
   "dependencies": {
     "@offset-dev/strapi-calendar": "^0.0.10",
-    "@strapi/plugin-documentation": "4.10.5",
-    "@strapi/plugin-i18n": "4.10.5",
+    "@strapi/plugin-documentation": "4.19.0",
+    "@strapi/plugin-i18n": "4.19.0",
     "@strapi/plugin-seo": "^1.9.1",
-    "@strapi/plugin-users-permissions": "4.10.5",
-    "@strapi/strapi": "4.10.5",
-    "@strapi/typescript-utils": "4.10.5",
+    "@strapi/plugin-users-permissions": "4.19.0",
+    "@strapi/strapi": "4.19.0",
+    "@strapi/typescript-utils": "4.19.0",
     "pg": "^8.11.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^5.3.4",
     "strapi-plugin-local-image-sharp": "^1.7.0",
-    "strapi-plugin-publisher": "^1.3.4"
+    "strapi-plugin-publisher": "^1.5.4",
+    "styled-components": "^5.3.11"
   },
-  "author": {
-    "name": "A Strapi developer"
+  "engines": {
+    "node": ">16.0.0 <=20.x.x",
+    "npm": ">=6.0.0"
   },
   "strapi": {
     "uuid": "56a68b0f-bfeb-49a3-a12c-07c7896711fe"
-  },
-  "engines": {
-    "node": ">=14.19.1 <=18.x.x",
-    "npm": ">=6.0.0"
-  },
-  "license": "MIT"
+  }
 }
