Update Dockerfile and package.json

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "styled-components": "^5.3.11"
   },
   "engines": {
-    "node": ">16.0.0 <=20.x.x",
+    "node": ">=16.x.x <=20.x.x",
     "npm": ">=6.0.0"
   },
   "strapi": {
