--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,9 +1,10 @@
 
-FROM node:18-alpine as build
+FROM node:18.17-alpine as build
 # Installing libvips-dev for sharp Compatability
-RUN apk update && apk add --no-cache build-base gcc autoconf automake zlib-dev libpng-dev vips-dev > /dev/null 2>&1
+RUN apk update && apk add --no-cache build-base gcc autoconf automake zlib-dev libpng-dev vips-dev git > /dev/null 2>&1
 ARG NODE_ENV=production
 ENV NODE_ENV=${NODE_ENV}
+
 WORKDIR /opt/
 COPY package.json package-lock.json ./
 RUN npm install -g node-gyp
@@ -13,7 +14,7 @@ WORKDIR /opt/app
 COPY . .
 RUN ["npm", "run", "build"]
 
-FROM node:18-alpine
+FROM node:18.17-alpine
 RUN addgroup -g 1001 strapi && adduser -u 1001 -G strapi -s /bin/sh -D strapi
 RUN apk add --no-cache vips-dev
 ARG NODE_ENV=production
